--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner"> 
         <div class="half-width">
             <h1>Welcome To </h1>
-            <h1> <span class="name-highlight"> Faisal </span>  Website</h1>
+            <h1> <span class="name-highlight"> Jankar </span>  Website</h1>
             <h3>World Class Web Developer</h3>
-            <p>I have 3 years of experience developing Node JS, Vue JS and React JS applications and will create the web app you desire. I will also resolve any bug or errors that you may experience in your existing application. You are always guaranteed work of the highest quality from me.</p>
+            <p> I will also resolve any bug or errors that you may experience in your existing application. You are always guaranteed work of the highest quality from me.</p>
+            <a class="link-button" target="_blank" href="https://web.programming-hero.com/">Link</a>
     </div>
     <div class="half-width">
         <img src="images/jhankar.png" alt="">
 
+    </div>
+</section>
+<section class="dream-area">
+    <div class="half-width">
+        <img src="images/jhankar2.png" alt="">
+        
+    </div>
+    <div class="half-width">
+        <h2>Become World's No. 1 Developer</h2>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/authwall?trk=ripf&trkInfo=AQEsU1CPmh7cnAAAAXbKD1R4XSkRAUjtjYIWigXZe0FEhJErdw7l4DOwCZHiOksONd0cCZMXQ7-0Lk9jUrnMN88bg_c28i6iNgJJedN0ZL5D9C2YCjEZ1EeYOQSI0mLQqsitafo=&originalReferer=https://programminghero1.github.io/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fprogramminghero%2F">Download Resume</a>
     </div>
 </section>
     
