--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
         <a class="link-button" target="_blank" href="https://www.linkedin.com/authwall?trk=ripf&trkInfo=AQEsU1CPmh7cnAAAAXbKD1R4XSkRAUjtjYIWigXZe0FEhJErdw7l4DOwCZHiOksONd0cCZMXQ7-0Lk9jUrnMN88bg_c28i6iNgJJedN0ZL5D9C2YCjEZ1EeYOQSI0mLQqsitafo=&originalReferer=https://programminghero1.github.io/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fprogramminghero%2F">Download Resume</a>
     </div>
 </section>
+<section class="experince-area">
+    <h2>Experiances</h2>
+    <div id="font-end" class="half-width single-experience"> 
+        <h2 class="name-highlight">Fornt End Developer</h2>
+        <h3>From 2020-Present</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto inventore, temporibus perspiciatis, illo nesciunt deleniti deserunt exercitationem, cumque nobis aspernatur tenetur provident quibusdam doloribus. Repudiandae quam quae incidunt facere!</p>
+    </div>
+    <div id="baby-web" class="half-width single-experience"> 
+        <h2 class="name-highlight">Baby Developer</h2>
+        <h3>From 2020-Present</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto inventore, temporibus perspiciatis, illo nesciunt deleniti deserunt exercitationem, cumque nobis aspernatur tenetur provident quibusdam doloribus. Repudiandae quam quae incidunt facere!</p>
+    </div>
+</section>
+<footer>
+   <p> Copyright © 2020 Programming-hero.com</p>
+</footer>
     
 </body>
 </html>
