--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </section>
 <section class="experince-area">
-    <h2>Experiances</h2>
+    <h2>Experiance</h2>
     <div id="font-end" class="half-width single-experience"> 
         <h2 class="name-highlight">Fornt End Developer</h2>
         <h3>From 2020-Present</h3>
